[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pythonscad"
dynamic = ["version"]
description = "Python interface to OpenSCAD — script-based 3D modeling with Python as a native language"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Guenther Sohler", email = "guenther.sohler@gmail.com" },
]
keywords = ["3d", "modeling", "cad", "openscad", "3d-printing", "csg", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering",
]
# Keep in sync with requirements/runtime.txt. The pip wheel
# automatically resolves these transitively, so we never have to vendor
# the source. Bundle-producing scripts (AppImage, macOS .app, Windows
# installer) consume requirements/runtime.txt directly via
# `pip install --target=...`.
#
# IPython is capped at <9 to avoid IPython 9.x's hard `psutil>=7`
# dependency, which has no prebuilt MSYS2/UCRT64 wheel and fails to
# build from source against MSYS2's `winternl.h`. See the longer
# rationale in requirements/runtime.txt.
dependencies = [
    "ipython>=8,<9",
]

[project.urls]
Homepage = "https://pythonscad.org"
Documentation = "https://pythonscad.org/tutorial/site/index.html"
Repository = "https://github.com/pythonscad/pythonscad"
Issues = "https://github.com/pythonscad/pythonscad/issues"
Changelog = "https://github.com/pythonscad/pythonscad/blob/master/CHANGELOG.md"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = ["*-musllinux*", "*-win32*", "*-win_arm64*", "cp*t-*", "pp*"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
build-frontend = "build"
test-requires = ["ipython>=8,<9"]
test-command = "python {project}/scripts/smoke-test-pip.py"

[tool.cibuildwheel.linux]
before-all = "bash scripts/cibuildwheel/install-deps-manylinux.sh"
before-build = "bash -c 'echo \"cibuildwheel CXX=$CXX\"; \"$CXX\" --version'"
environment = { CC = "/opt/rh/gcc-toolset-12/root/usr/bin/gcc", CXX = "/opt/rh/gcc-toolset-12/root/usr/bin/g++", CXXFLAGS = "-std=c++17" }

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
before-all = "bash scripts/cibuildwheel/install-deps-macos.sh"

[tool.cibuildwheel.windows]
environment = { VCPKG_DEFAULT_TRIPLET = "x64-windows" }
before-all = "pwsh scripts/cibuildwheel/install-deps-windows.ps1"
repair-wheel-command = "pwsh scripts/cibuildwheel/repair-wheel-windows.ps1 -Wheel {wheel} -DestDir {dest_dir}"
